@@ -47,6 +47,12 @@
           </systemPropertyVariables>
           <testFailureIgnore>true</testFailureIgnore>
           <failIfNoTests>false</failIfNoTests>
+          <!-- Optimizaciones para ejecución más rápida -->
+          <parallel>methods</parallel>
+          <threadCount>4</threadCount>
+          <forkCount>1</forkCount>
+          <reuseForks>true</reuseForks>
+          <argLine>-Xmx512m -XX:MaxPermSize=128m</argLine>
         </configuration>
       </plugin>
       
